--- a/.github/workflows/release-verify.yml
+++ b/.github/workflows/release-verify.yml
@@ -12,7 +12,7 @@ jobs:
     uses: kungfu-trader/workflows/.github/workflows/.release-verify.yml@v1.0-alpha
     with:
       prebuild: false
-  
+      check-format: false
   verify:
     needs: try
     runs-on: ubuntu-20.04
